[gd_scene load_steps=4 format=3 uid="uid://dapwfy1bnluxx"]

[ext_resource type="FontFile" uid="uid://fitttpkbkn2q" path="res://assets/fonts/honeyblot_caps.ttf" id="1_40v6f"]
[ext_resource type="Script" uid="uid://vc5nkubwa0w4" path="res://scenes/windows/creature_stats_popup.gd" id="1_ogwqq"]

[sub_resource type="LabelSettings" id="LabelSettings_ogwqq"]
font = ExtResource("1_40v6f")
font_size = 24
font_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
outline_size = 4
outline_color = Color(0.8156863, 0.5058824, 0.34901962, 1)
shadow_size = 0

[node name="CreatureStatsPopup" type="PanelContainer"]
custom_minimum_size = Vector2(300, 250)
offset_right = 40.0
offset_bottom = 40.0
theme_type_variation = &"DefaultPanelContainer"
script = ExtResource("1_ogwqq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CreatureName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Creature Name"
label_settings = SubResource("LabelSettings_ogwqq")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpeciesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Species: [species]"

[node name="StrengthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Strength: [value]"

[node name="AgilityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Agility: [value]"

[node name="IntelligenceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Intelligence: [value]"

[node name="TagsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tags: None"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
